--- a/index.html
+++ b/index.html
@@ -122,93 +122,76 @@
       </div>
     </div>
 
-<script>
-  async function sendMessage() {
-    const input = document.getElementById("user-input");
-    const question = input.value.trim();
-    if (!question) return;
+    <script>
+      async function sendMessage() {
+        const input = document.getElementById("user-input");
+        const question = input.value.trim();
+        if (!question) return;
 
-    const chatBox = document.getElementById("chat-box");
+        const chatBox = document.getElementById("chat-box");
 
-    const userMsg = document.createElement("div");
-    userMsg.className = "message user";
-    userMsg.textContent = question;
-    chatBox.appendChild(userMsg);
+        const userMsg = document.createElement("div");
+        userMsg.className = "message user";
+        userMsg.textContent = question;
+        chatBox.appendChild(userMsg);
 
-    input.value = "";
-    chatBox.scrollTop = chatBox.scrollHeight;
+        input.value = "";
+        chatBox.scrollTop = chatBox.scrollHeight;
 
-    const responseMsg = document.createElement("div");
-    responseMsg.className = "message";
-    chatBox.appendChild(responseMsg);
+        const responseMsg = document.createElement("div");
+        responseMsg.className = "message";
+        responseMsg.textContent = "曹先生思考中...";
+        chatBox.appendChild(responseMsg);
 
-    const controller = new AbortController();
+        try {
+          const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ question })
+          });
 
-    try {
-      const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ question }),
-        signal: controller.signal
-      });
+          const data = await res.json();
 
-      const reader = res.body.getReader();
-      const decoder = new TextDecoder("utf-8");
+          if (data.content) {
+            const mainText = data.content.replace(/<\/?quick_question>/g, '');
+            responseMsg.textContent = mainText;
 
-      let fullText = "";
-
-      while (true) {
-        const { done, value } = await reader.read();
-        if (done) break;
-
-        const chunk = decoder.decode(value);
-        const lines = chunk.split("\n").filter(line => line.startsWith("data: "));
-
-        for (const line of lines) {
-          const content = line.replace(/^data:\s*/, "");
-          fullText += content;
-          responseMsg.textContent = fullText;
-          chatBox.scrollTop = chatBox.scrollHeight;
+            const relatedMatches = [...data.content.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
+            relatedMatches.forEach(match => {
+              const quick = document.createElement("div");
+              quick.className = "quick-question-bubble";
+              quick.textContent = match[1];
+              quick.onclick = () => {
+                const input = document.getElementById("user-input");
+                input.value = match[1];
+                input.focus();
+              };
+              chatBox.appendChild(quick);
+            });
+          } else {
+            responseMsg.textContent = "抱歉，未能获取回答。";
+          }
+        } catch (err) {
+          responseMsg.textContent = "网络错误，请稍后重试。";
         }
+
+        chatBox.scrollTop = chatBox.scrollHeight;
       }
 
-      // 处理 quick_question 标签
-      const cleanedText = fullText.replace(/<\/?quick_question>/g, '');
-      responseMsg.textContent = cleanedText;
-
-      const matches = [...fullText.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
-      matches.forEach(match => {
-        const quick = document.createElement("div");
-        quick.className = "quick-question-bubble";
-        quick.textContent = match[1];
-        quick.onclick = () => {
-          input.value = match[1];
-          input.focus();
-        };
-        chatBox.appendChild(quick);
+      document.getElementById("user-input").addEventListener("keydown", function (e) {
+        if (e.key === "Enter") {
+          e.preventDefault();
+          sendMessage();
+        }
       });
 
-    } catch (err) {
-      responseMsg.textContent = "网络错误，请稍后重试。";
-    }
-
-    chatBox.scrollTop = chatBox.scrollHeight;
-  }
-
-  document.getElementById("user-input").addEventListener("keydown", function (e) {
-    if (e.key === "Enter") {
-      e.preventDefault();
-      sendMessage();
-    }
-  });
-
-  document.querySelectorAll(".message.quick").forEach(el => {
-    el.addEventListener("click", () => {
-      const input = document.getElementById("user-input");
-      input.value = el.textContent.replace(/^🔍\s*/, "");
-      input.focus();
-    });
-  });
-</script>
+      document.querySelectorAll(".message.quick").forEach(el => {
+        el.addEventListener("click", () => {
+          const input = document.getElementById("user-input");
+          input.value = el.textContent.replace(/^🔍\s*/, "");
+          input.focus();
+        });
+      });
+    </script>
   </body>
 </html>
