--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="message quick">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
       </div>
       <div class="input-area">
-        <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
+        <input type="text" id="user-input" placeholder="请输入问题，Enter 发送" />
         <button onclick="sendMessage()">发送</button>
       </div>
     </div>
@@ -199,7 +199,7 @@
 
               const header = document.createElement("div");
               header.className = "quick-questions-header";
-              header.textContent = "猜你还想问老夫~";
+              header.textContent = "猜你还想问曹先生~";
               quickQuestionsContainer.appendChild(header);
 
               const quickQuestionsList = document.createElement("div");
