--- a/index.html
+++ b/index.html
@@ -138,7 +138,13 @@
     <video class="video-bg" src="video.mov" autoplay muted loop></video>
     <div class="chat-container">
       <div class="messages" id="chat-box">
-        <!-- 聊天消息将在这里动态添加 -->
+        <div class="message">您好，请叫我曹先生</div>
+        <div class="message quick">🔍 红楼梦中有哪些美食？</div>
+        <div class="message quick">🔍 红楼梦中有哪些判词？</div>
+        <div class="message quick">🔍 红楼梦中有哪些故事？</div>
+        <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
+        <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
+        <div class="message quick">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
       </div>
       <div class="input-area">
         <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
@@ -154,36 +160,33 @@
 
         const chatBox = document.getElementById("chat-box");
 
-        // 创建用户消息元素
         const userMsg = document.createElement("div");
         userMsg.className = "message user";
         userMsg.textContent = question;
         chatBox.appendChild(userMsg);
 
-        // 清空输入框
         input.value = "";
         chatBox.scrollTop = chatBox.scrollHeight;
 
-        // 创建回答消息元素
         const responseMsg = document.createElement("div");
         responseMsg.className = "message";
         responseMsg.textContent = "曹先生思考中...";
         chatBox.appendChild(responseMsg);
 
         try {
-          // 模拟API请求延迟
-          await new Promise(resolve => setTimeout(resolve, 500));
+          const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ question })
+          });
 
-          // 模拟API返回数据
-          const mockData = {
-            content: "我不是曹雪芹，老夫乃是南京市文投集团-文都云（南京）数字科技有限公司依托长干大模型与红楼梦数据集构建的红楼梦AI智能体，我可以为您解答红楼梦中相关内容哦~\n\n<quick_question>贾宝玉最喜爱的女子是谁？</quick_question>\n\n<quick_question>林黛玉的别称是什么？</quick_question>"
-          };
+          const data = await res.json();
 
-          if (mockData.content) {
+          if (data.content) {
             // 提取 <quick_question> 标签中的内容，考虑换行符
-            const relatedMatches = [...mockData.content.matchAll(/<quick_question>\s*(.*?)\s*<\/quick_question>/gs)];
+            const relatedMatches = [...data.content.matchAll(/<quick_question>\s*(.*?)\s*<\/quick_question>/gs)];
             // 去除 <quick_question> 标签，得到主回答内容
-            let mainText = mockData.content;
+            let mainText = data.content;
             relatedMatches.forEach(match => {
               mainText = mainText.replace(match[0], '');
             });
@@ -208,8 +211,9 @@
                 quick.className = "quick-question-item";
                 quick.textContent = match[1].trim(); // 去除可能的首尾空白
                 quick.onclick = () => {
-                  // 直接发送问题
-                  sendMessage(); // 调用sendMessage函数发送问题
+                  const input = document.getElementById("user-input");
+                  input.value = match[1].trim();
+                  input.focus();
                 };
                 quickQuestionsList.appendChild(quick);
               });
@@ -234,47 +238,13 @@
         }
       });
 
-      // 初始化聊天窗口上方的六个问题
-      const initialQuestions = [
-        "红楼梦中有哪些美食？",
-        "红楼梦中有哪些判词？",
-        "红楼梦中有哪些故事？",
-        "大梦·红楼有哪些值得一看的亮点？",
-        "大梦·红楼和其他红楼梦演出有哪些不同？",
-        "你是曹雪芹吗？你是如何AI重生的？"
-      ];
-
-      const chatBox = document.getElementById("chat-box");
-
-      // 初始化欢迎消息
-      const welcomeMsg = document.createElement("div");
-      welcomeMsg.className = "message";
-      welcomeMsg.textContent = "您好，请叫我曹先生";
-      chatBox.appendChild(welcomeMsg);
-
-      // 初始化六个问题框
-      const initialQuickQuestions = document.createElement("div");
-      initialQuickQuestions.className = "quick-questions-container";
-
-      const initialQuickQuestionsList = document.createElement("div");
-      initialQuickQuestionsList.className = "quick-questions-list";
-
-      initialQuestions.forEach(q => {
-        const item = document.createElement("div");
-        item.className = "quick-question-item";
-        item.textContent = q;
-        item.onclick = () => {
-          // 直接发送问题
-          sendMessage();
-        };
-        initialQuickQuestionsList.appendChild(item);
+      document.querySelectorAll(".message.quick").forEach(el => {
+        el.addEventListener("click", () => {
+          const input = document.getElementById("user-input");
+          input.value = el.textContent.replace(/^🔍\s*/, "");
+          input.focus();
+        });
       });
-
-      initialQuickQuestions.appendChild(initialQuickQuestionsList);
-      chatBox.appendChild(initialQuickQuestions);
-
-      // 初始化时自动触发一次发送消息，以显示初始界面
-      // sendMessage();
     </script>
   </body>
 </html>
