--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
     <div class="chat-container">
       <div class="messages" id="chat-box">
         <div class="message">您好，请叫我曹先生</div>
-        <div class="message quick">🔍 红楼梦中有哪些美食？</div>
-        <div class="message quick">🔍 红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍 红楼梦中有哪些故事？</div>
-        <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
-        <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
-        <div class="message quick">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
+        <div class="message quick">红楼梦中有哪些美食？</div>
+        <div class="message quick">红楼梦中有哪些判词？</div>
+        <div class="message quick">红楼梦中有哪些故事？</div>
+        <div class="message quick">大梦·红楼有哪些值得一看的亮点？</div>
+        <div class="message quick">大梦·红楼和其他红楼梦演出有哪些不同？</div>
+        <div class="message quick">你是曹雪芹吗？你是如何AI重生的？</div>
       </div>
       <div class="input-area">
         <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
@@ -211,7 +211,6 @@
                 quick.className = "quick-question-item";
                 quick.textContent = match[1].trim(); // 去除可能的首尾空白
                 quick.onclick = () => {
-                  // 直接发送问题
                   sendMessageWithQuestion(match[1].trim());
                 };
                 quickQuestionsList.appendChild(quick);
@@ -230,7 +229,6 @@
         chatBox.scrollTop = chatBox.scrollHeight;
       }
 
-      // 新增函数：用于直接发送指定问题
       function sendMessageWithQuestion(question) {
         const input = document.getElementById("user-input");
         input.value = question;
@@ -244,11 +242,16 @@
         }
       });
 
+      // 统一的点击事件处理函数
+      function handleQuestionItemClick(question) {
+        sendMessageWithQuestion(question);
+      }
+
       // 为初始的六个问题框绑定点击事件
       document.querySelectorAll(".message.quick").forEach(el => {
         el.addEventListener("click", () => {
           const question = el.textContent.replace(/^🔍\s*/, "");
-          sendMessageWithQuestion(question);
+          handleQuestionItemClick(question);
         });
       });
 
@@ -256,7 +259,7 @@
       document.addEventListener("click", function(e) {
         if (e.target.classList.contains("quick-question-item")) {
           const question = e.target.textContent;
-          sendMessageWithQuestion(question);
+          handleQuestionItemClick(question);
         }
       });
     </script>
